# argenta

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  idea.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
argenta/: __init__.py
argenta/causal/: __init__.py  cate.py  models.py  segments.py  uplift.py
argenta/config/: __init__.py  loader.py  schema.py
argenta/connectors/: __init__.py  base.py  bigquery.py  redshift.py  snowflake.py
argenta/pipeline/: __init__.py  runner.py
argenta/sql/: __init__.py  dialect.py  generator.py
argenta/sql/templates/: exposure_dedup.sql.j2  feature_join.sql.j2  outcome_join.sql.j2  prepared_dataset.sql.j2
argenta/stats/: __init__.py  ate.py  cuped.py  models.py
argenta/writer/: __init__.py  results_writer.py
docs/: architecture.md  onboarding.md  sql_pipeline.md  statistics.md
tests/: conftest.py
tests/integration/: README.md  test_bigquery_connector.py  test_redshift_connector.py  test_snowflake_connector.py
tests/unit/: test_ate.py  test_cate.py  test_config.py  test_cuped.py  test_segments.py  test_sql_generator.py
